--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Dolces Payslips</title>
+    <title>Home - Dolce Payslips</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     </nav>
 
     <header>
-        <h1>Welcome to the Payslip Generator</h1>
+        <h1>Welcome to the Dolce Payslips</h1>
         <p>Your go-to tool for generating accurate and professional payslips with ease.</p>
     </header>
 
